# agent-home-migrate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md  releasing.md
src/agent_home_migrate/: __init__.py  bundle.py  cli.py  inventory.py  locations.py  models.py  profiles.py  restore.py  secret_audit.py  util.py
tests/: helpers.py  test_age_integration.py  test_bundle_restore.py  test_cli.py  test_inventory.py  test_locations.py  test_processes.py  test_profiles.py  test_secret_audit.py  test_version.py
