[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-home-migrate"
dynamic = ["version"]
description = "Safely inventory, bundle, restore, and verify local Codex and Claude Code state"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "agent-home-migrate contributors" }]
keywords = ["codex", "claude-code", "migration", "backup", "dotfiles"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Archiving :: Backup",
]
dependencies = []

[project.scripts]
ahm = "agent_home_migrate.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "agent_home_migrate.__version__" }
